--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: "https://csvass.github.io"
 title: CsendesBlog
 languageCode: hu
 paginate: 5
-theme: hugo-PaperMod
+theme: PaperMod
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
