--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ languages:
         weight: 1   
         homeInfoParams:
             Title: "Szia! \U0001F44B"
-            Content: Üdv a blogomon! Azért indítottam ezt az oldalt, hogy megismerjem és gyakoroljam a webes technológiákat, valmint újakat tanuljak.
+            Content: Üdv a blogomon! Azért indítottam ezt az oldalt, hogy megismerjem és gyakoroljam a webes technológiákat, valmint újakat tanuljak. Leginkább irodai alkalmazások (naptár, teendők, jegyzetek), hatékony adatkezelési lehetőségek (táblázat, adatbázis), a kreatív írás eszközei (napló, blog) és a tartalmak szinkronizálása (felhő) érdekel.
         menu:
             main:
                 - name: Archívum
@@ -110,7 +110,7 @@ params:
     # home-info mode
     homeInfoParams:
         Title: "Hi There \U0001F44B"
-        Content: This is my Github page/blog abut useful web tools. I started it for learning purposes. I would like to improve my programming knowledge.
+        Content: This is my Github page/blog abut useful web tools. I started it for learning purposes. I would like to improve my programming knowledge. I am interested in productivity tools, data management and cloud services on multiple platforms.
 
     socialIcons:
         - name: github
