--- a/config.yml
+++ b/config.yml
@@ -83,12 +83,12 @@ params:
     disableSpecial1stPost: false
         
 
-    assets:
-        favicon: "<link / abs url>"
-        favicon16x16: "<link / abs url>"
-        favicon32x32: "<link / abs url>"
-        apple_touch_icon: "<link / abs url>"
-        safari_pinned_tab: "<link / abs url>"
+   # assets:
+    #    favicon: "<link / abs url>"
+    #    favicon16x16: "<link / abs url>"
+    #    favicon32x32: "<link / abs url>"
+    #    apple_touch_icon: "<link / abs url>"
+    #    safari_pinned_tab: "<link / abs url>"
 
     label:
         text: "CsendesBlog"   
