--- a/config.yml
+++ b/config.yml
@@ -35,6 +35,9 @@ languages:
                 - name: Keresés
                   url: archive/
                   weight: 20
+		- name: Rólam
+		  url: about/
+ 		  weight: 20
       en: 
         languageName: ":en:"
         weight: 2   
@@ -52,6 +55,9 @@ languages:
                 - name: Search
                   url: archive/
                   weight: 20
+		- name: About
+		  url: about/
+ 		  weight: 20
                 
                 
  
